@@ -246,6 +246,7 @@ define function, begin
 237,soundslots,0              #returns the number of slots available
 238,searchstring,3,0,0,1      #Search string, (ID1,ID2,start)
 239,trimstring,3,0,-1,1       #Trims the specified string, (ID, start,length
+240,stringfromtextbox,3,0,0,0 #loads string with whatever line in whatever textbox you specify
 end
 
 #--------------------------------------------------------------------------
